# TableParser

./: pyproject.toml  requirements.txt
tableparser/: example.py  output.txt  parser.old.py  parser.py  structure.py
tests/: test_tableparser.py
