[tool.poetry]
name = "TableParser"
version = "0.1.0"
description = ""
authors = ["Marat Sher <genimotion@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
numpy = "^1.23.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
